# telegram-bot-choir

./: .gitignore  Procfile  README.md  Telegram bot Railway app.py  bot.py  config.py  download_diagnostics.py  downloader.py  google_oauth.py  logging_utils.py  main.py  main_bot.py  oldbot.py.bak  packages.txt  requirements.txt  run_bot.py  setup_youtube_cookies.py  streamlit_app.py
.streamlit/: config.toml
Cpp/: .gitignore  BUILD.md  Dockerfile
Cpp/choir-bot-cpp/: CMakeLists.txt  config.json.example
Cpp/choir-bot-cpp/include/data/: Database.hpp  FeatureControl.hpp  Vocabulary.hpp
Cpp/choir-bot-cpp/include/handlers/: BaseHandler.hpp
Cpp/choir-bot-cpp/include/models/: User.hpp
Cpp/choir-bot-cpp/include/utils/: AIAssistant.hpp  AudioDownloader.hpp  Logger.hpp
Cpp/choir-bot-cpp/src/: Application.cpp
Cpp/choir-bot-cpp/src/data/: Database.cpp  FeatureControl.cpp
Cpp/choir-bot-cpp/src/utils/: SongParser.cpp
Cpp/include/: Application.hpp
Cpp/include/data/: DriveService.hpp  OrganistRoster.hpp
Cpp/include/models/: Song.hpp
Cpp/include/utils/: SongParser.hpp
Cpp/src/: Application.cpp
Cpp/src/data/: Database.cpp  DriveService.cpp  OrganistRoster.cpp  Vocabulary.cpp
Cpp/src/handlers/: BaseHandler.cpp  CommandHandlers.cpp
Cpp/src/utils/: LockFile.cpp  Logger.cpp  Search.cpp  SongParser.cpp
Modules/: choir.py
bot/: config.py  data_loader.py  google_api.py  handlers.py  logging_utils.py  song_logic.py  utils.py
data/: __init__.py  ai_model_config.py  auth.py  change_detector.py  datasets.py  drive.py  feature_control.py  hybrid_detector.py  organist_roster.py  sheet_upload.py  sync_manager.py  udb.py  vocabulary.py
downloader/: __init__.py  audio.py
include/data/: Database.hpp  UserDatabase.hpp
include/handlers/: CommandHandlers.hpp
include/models/: Config.hpp
include/utils/: LockFile.hpp  Notation.hpp  Search.hpp
modules/: __init__.py  bot.py  data_loader.py  search.py  utils.py
src/: main.cpp
src/data/: UserDatabase.cpp
src/models/: Config.cpp  Song.cpp  User.cpp
src/utils/: AIAssistant.cpp  AudioDownloader.cpp  Notation.cpp
telegram/: conversations.py
telegram_handlers/: __init__.py  conversations.py  handlers.py  preferences.py  utils.py
utils/: ai_assistant.py  enhanced_search.py  lockfile.py  midi_converter.py  notation.py  notation_checker.py  rag_executor.py  rag_response_generator.py  search.py
